Fix background noise so it doesn't overflow the page

--- a/sass/_partials/_listen-now.scss
+++ b/sass/_partials/_listen-now.scss
@@ -82,7 +82,7 @@
             left: 0;
             position: absolute;
             top: 0;
-            width: 150%;
+            width: 100%;
             z-index: 2;
 
             @include breakpoint(mobile) {
