--- a/style.css
+++ b/style.css
@@ -1048,7 +1048,7 @@ a.committee-tag:active,
   left: 0;
   position: absolute;
   top: 0;
-  width: 150%;
+  width: 100%;
   z-index: 2;
 }
 @media (max-width: 620px) {
